--- a/knapsack/mainNB.ipynb
+++ b/knapsack/mainNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "900b3456",
    "metadata": {},
    "outputs": [
@@ -13,8 +13,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mClassical_Building_Blocks\u001b[39;00m \u001b[39mimport\u001b[39;00m knapsack_solver_classical\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mQuantum_Building_Blocks\u001b[39;00m \u001b[39mimport\u001b[39;00m knapsack_solver_quantum\n",
-      "File \u001b[0;32m~/workdir/HVRP/knapsack/Quantum_Building_Blocks.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcommon\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit_optimization\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtranslators\u001b[39;00m \u001b[39mimport\u001b[39;00m from_docplex_mp\n",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mClassical_Building_Blocks\u001b[39;00m \u001b[39mimport\u001b[39;00m knapsack_solver_classical\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mQuantum_Building_Blocks\u001b[39;00m \u001b[39mimport\u001b[39;00m knapsack_solver_quantum\n",
+      "File \u001b[0;32m~/workdir/HVRP/knapsack/Quantum_Building_Blocks.py:2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcommon\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mqiskit\u001b[39;00m \u001b[39mimport\u001b[39;00m Aer\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'qiskit'"
      ]
     }
@@ -25,17 +25,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a0449ef7",
    "metadata": {},
    "source": [
     "# KNAPSACK PROBLEM\n",
-    "    As part of the capacitated hetrogenous vehicle routing problem"
+    "<!--     As part of the capacitated hetrogenous vehicle routing problem -->"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a7707618",
    "metadata": {},
@@ -45,23 +43,22 @@
     "1. [Introduction](#Introduction)\n",
     "1. [Data Loading](#Data-Loading)\n",
     "1. [Classical Method](#Classical-Method)\n",
-    "    * [Description](#Classical-Description)\n",
-    "    * [Results](#classical-Resaults)\n",
-    "1. [Quantum Method](#Classical)\n",
-    "    * [QAOA](#QAOA)\n",
-    "    * [Other Algorithm](#Other-Algorithms)\n",
-    "    * [docplex](#Docplex)\n",
-    "    * [Results](#Quantum-Resaults)\n",
-    "    * [Quantum-Circuit](#Quantum-Resaults)\n",
+    "   * [Description](#Description)\n",
+    "   * [Results](#Resaults)\n",
+    "1. [Quantum Method](#Quantum-Method)\n",
+    "   * [docplex](#Docplex)\n",
+    "   * [QAOA](#QAOA)\n",
+    "   * [Other Algorithm](#Other-Algorithms)\n",
+    "   * [Results](#Resaults)\n",
+    "   * [Quantum-Circuit](#Quantum-Resaults)\n",
     "1. [Benchmarking](#Benchmarking)\n",
-    "    * [Quantum Advantages](#Quantum-Advantages)\n",
-    "    * [Algorithms Benchmarking](#Algorithms-benchmarking)\n",
+    "   * [Quantum Advantages](#Quantum-Advantages)\n",
+    "   * [Algorithms Benchmarking](#Algorithms-benchmarking)\n",
     "1. [Conclusions](#Conclusions)\n",
     "1. [Future Work](#Future-Work)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "261962bf",
    "metadata": {},
@@ -77,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6c26d321",
    "metadata": {},
@@ -92,16 +88,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "fa068399",
-   "metadata": {},
-   "source": [
-    "$$C(X') = M(W_{max} - \\sum_{i=0}^{n-1} x_{i}w_{i} - ֿֿ\\sum(2j * y[j]))^2 - \\sum_{i}^{n-1} x_{i}v_{i}$$"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b694ab5e",
    "metadata": {},
@@ -110,7 +96,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "34813fee",
    "metadata": {},
@@ -124,7 +109,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6d28fbbf",
    "metadata": {},
@@ -134,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9eda5b72",
    "metadata": {},
    "outputs": [],
@@ -144,7 +128,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "befa0910",
    "metadata": {},
@@ -153,7 +136,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "10b9d959",
    "metadata": {},
@@ -173,22 +155,39 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ccfabcc2",
    "metadata": {},
    "source": [
-    "## Results"
+    "## Resaults"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a1fe7106",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "your knapsack will contain:\n",
+      "Object: 2 - Value: 6 - Weight: 3\n",
+      "Object: 3 - Value: 8 - Weight: 3\n",
+      "Object: 4 - Value: 7 - Weight: 5\n",
+      "Object: 6 - Value: 4 - Weight: 7\n",
+      "Object: 7 - Value: 6 - Weight: 5\n",
+      "The maximum weight the knapsack can have is: 25 \n",
+      "And according to the data provided, we can put 1 objects inside it\n",
+      "with a total value of 31 \n",
+      "and a total weight of 23\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "chosen_objects, chosen_values, chosen_weights, max_weigth, total_objects, total_value, chosen_weights_sum = knapsack_solver_classical(data_file, max_knapsack_weight)\n",
     "\n",
     "print(\"your knapsack will contain:\")\n",
@@ -198,7 +197,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "8e00fe03",
    "metadata": {},
@@ -207,9 +205,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e2c92a2",
+   "metadata": {},
+   "source": [
+    "## Docplex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0617617",
+   "metadata": {},
+   "source": [
+    "Docplex is a powerful optimization modeling and solving library that provides a comprehensive suite of tools for tackling complex optimization problems. Developed by IBM, Docplex offers a user-friendly and intuitive interface, making it accessible to both experts and beginners in the field of optimization. With Docplex, users can formulate their optimization problems using a high-level mathematical modeling language, allowing them to express the constraints and objectives of their problems in a clear and concise manner. The library supports a wide range of mathematical programming techniques, including linear programming, mixed-integer programming, and quadratic programming, among others. Furthermore, Docplex incorporates advanced algorithms and solvers that efficiently explore the solution space and find optimal or near-optimal solutions to the given problems. By leveraging the capabilities of Docplex, users can streamline decision-making processes, improve resource allocation, and optimize various aspects of their operations, ultimately leading to cost savings, increased efficiency, and enhanced performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccb738da",
+   "metadata": {},
+   "source": [
+    "## QAOA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf916bc",
+   "metadata": {},
+   "source": [
+    "The Quantum Approximate Optimization Algorithm (QAOA) is a quantum computing approach that leverages the power of quantum systems to solve optimization problems. One of the problems it can address is the Knapsack problem, which involves maximizing the value of items that can be packed into a limited capacity bag. QAOA tackles such NP-hard optimization problems by mapping them to a Quadratic Unconstrained Binary Optimization (QUBO) problem, also known as the Ising formulation. In this process, the problem is transformed into a quadratic form, which represents the energy landscape of the system. QAOA then utilizes a sequence of quantum gates to explore this landscape and identify the optimal solution.\n",
+    "\n",
+    "To solve an NP-hard optimization problem using the QAOA algorithm, several steps need to be followed. First, the problem must be formulated as a QUBO problem, which involves transforming the constraints and objectives into a quadratic form. This is done by assigning binary variables to the problem's elements and defining a cost function that represents the objective and constraints. Next, the QUBO problem is encoded into a quantum circuit, which is composed of a series of quantum gates that manipulate the qubits' states. The circuit parameters, known as angles, are then optimized to minimize the cost function and obtain the solution with the highest value.\n",
+    "\n",
+    "The QAOA algorithm is closely related to IBM's docplex optimization library, which provides a high-level programming interface for formulating and solving optimization problems. By using docplex, users can define the problem's constraints, objective function, and decision variables in a convenient manner. This library can be integrated with QAOA to easily convert the problem into a QUBO form and facilitate the transformation of the optimized angles into a quantum circuit. This combination of QAOA and docplex enables researchers and practitioners to effectively solve complex optimization problems, including the Knapsack problem, leveraging the power of quantum computing and quantum-inspired techniques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0053db0",
+   "metadata": {},
+   "source": [
+    "## Other Algorithms \n",
+    "\n",
+    "SPSA (Simultaneous Perturbation Stochastic Approximation) is a powerful optimization algorithm that is commonly used to solve difficult optimization problems. It belongs to the class of derivative-free optimization methods and is particularly well-suited for problems with noisy or black-box objective functions. SPSA iteratively estimates the gradient of the objective function by perturbing the input variables in a random manner and evaluating the corresponding function values. These gradient estimates are then used to update the variables in the direction that minimizes the objective function. SPSA's ability to approximate gradients using noisy evaluations makes it a valuable tool for solving optimization problems in various domains, including the knapsack problem.\n",
+    "\n",
+    "COBYLA (Constrained Optimization BY Linear Approximations) is another optimization algorithm commonly used to solve constrained optimization problems. It belongs to the class of derivative-free optimization methods and is particularly effective when dealing with problems where the objective and constraint functions can only be evaluated, but their gradients cannot be computed or are not available. COBYLA approximates the objective function and constraints by using linear models around the current point and iteratively updates the variables to minimize the objective function while satisfying the constraints. This makes COBYLA suitable for solving constrained versions of optimization problems like the knapsack problem.\n",
+    "\n",
+    "When it comes to solving NP-hard optimization problems like the knapsack problem using the QAOA (Quantum Approximate Optimization Algorithm) or QUBO (Quadratic Unconstrained Binary Optimization) algorithm, several steps need to be taken. First, the problem needs to be formulated as a QUBO model, which involves mapping the problem variables and constraints into binary variables and quadratic terms. This formulation is related to the quadratic form or Ising formulation commonly used in optimization. Once the problem is in the QUBO form, the QAOA algorithm can be applied to find the optimal or near-optimal solution. The QAOA algorithm uses quantum circuits to evolve a quantum state that represents a candidate solution, and the parameters of the quantum circuits are optimized to maximize the objective function. To solve the QUBO problem and implement the QAOA algorithm, frameworks like docplex can be used. Docplex provides tools for modeling and solving mathematical optimization problems, including QUBO models, making it easier to formulate and solve complex optimization problems using the QAOA algorithm."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6029b0d8",
+   "metadata": {},
+   "source": [
+    "## Quantum-Resaults"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bad2341",
+   "id": "22cee717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,46 +273,11 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "ddc46030",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63ae80aa",
    "metadata": {},
-   "source": [
-    "Now, we can define a vector x as x = [Z_1, Z_2, ..., Z_W]^T, where the superscript T denotes the transpose of the vector.\n",
-    "\n",
-    "Revisiting the expression:\n",
-    "\n",
-    "$$A(n^2(Z_1^2 + Z_1Z_2 + ... + Z_1Z_W + Z_2Z_1 + Z_2^2 + ... + Z_2Z_W + ... + Z_WZ_1 + Z_WZ_2 + ... + Z_W^2) - 2n(\\sum\\limits_1^W(Z_n))(sum(W_iX_i)) + \\sum\\limits_1^N\\sum\\limits_1^N w_{ij})$$\n",
-    "\n",
-    "We can rewrite it as:\n",
-    "\n",
-    "$$A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))(sum(W_iX_i)) + \\sum\\limits_1^N\\sum\\limits_1^N w_{ij})$$\n",
-    "\n",
-    "Here, we substituted the matrix Q as defined earlier. Now, let's continue simplifying:\n",
-    "\n",
-    "$$A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))(\\sum\\limits_1^N(W_iX_i)) + \\sum\\limits_1^N\\sum\\limits_1^N w_{ij})\n",
-    "\n",
-    "= A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))(\\sum\\limits_1^N(W_iX_i)) + \\sum\\limits_1^N\\sum\\limits_1^N (W_iX_i)(W_jX_j))$$\n",
-    "\n",
-    "Now, let's define a vector g of size N as $$ g = \\sum\\limits_1^N(W_iX_i).$$\n",
-    "\n",
-    "The expression becomes:\n",
-    "\n",
-    "$$A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))g + g^TQg)$$\n",
-    "\n",
-    "Finally, let's define a constant c as $$ c = g^TQg.$$\n",
-    "\n",
-    "The expression simplifies to:\n",
-    "\n",
-    "$$ A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))g + c) $$\n",
-    "\n",
-    "Therefore, the simplified expression is $$ A(n^2(x^TQx) - 2n(\\sum\\limits_1^W(Z_n))g + c) $$ , where Q is an N x N matrix, x and g are vectors of appropriate sizes, and c is a constant."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "658a5663",
-   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -276,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
